# Cosmos-cli

./: README.md
Cosmos-cli/: .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run_cosmos.bat  run_cosmos.sh  server.py  test_flight.py
Cosmos-cli/cosmos/: __init__.py  config.py  data.py  database.py  events.py  flight.py  input.py  main.py  new_main.py  ui.py  ui_contracts.py  ui_core.py  ui_flight.py  ui_station.py  ui_tech.py  ui_vab.py  vab.py
Cosmos-cli/design/docs/: index.html
Cosmos-cli/design/main/: DESIGN.md  code.html
