[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-cli"
version = "0.1.0"
description = "VoidCorp Terminal — CLI Space Program Simulator (KSP-inspired)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "rich~=15.0",
    "typer~=0.26",
    "inquirer~=3.4",
    "sqlalchemy>=1.4,<3",
]

[project.urls]
Homepage = "https://cosmos-cli.xyz"
Documentation = "https://docs.cosmos-cli.xyz"
Repository = "https://github.com/shirou-eh/Cosmos-cli"

[project.scripts]
cosmos = "cosmos.main:app"

[tool.setuptools.packages.find]
include = ["cosmos*"]
